# advent2021

./: .ghci  .ghcid  CHANGELOG.md  LICENSE  README.md  advent2021.cabal  fetchInput.sh
app/: Main.hs
src/: Advent2021.hs  Day1.hs  Day16.hs  Day17.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
test/: Spec.hs
