cabal-version:       2.4
name:                advent2021
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Andreas Källberg
maintainer:          Andreas Källberg <anka.213@gmail.com>
copyright:           2021 Andreas Källberg
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , hspec
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Advent2021
                     , Day1

executable advent2021
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       advent2021
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite advent2021-test
  import:              common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:       advent2021
                     , hspec
                     , raw-strings-qq